--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,4 +10,4 @@ VOLUME /home/$USER/.gradle
 
 ARG JAVA_VERSION=17.0.7-ms
 RUN sudo mkdir /home/$USER/.m2 /home/$USER/.gradle && sudo chown $USER:$USER /home/$USER/.m2 /home/$USER/.gradle
-RUN bash -lc '. /usr/local/sdkman/bin/sdkman-init.sh && sdk install java $JAVA_VERSION && sdk use java $JAVA_VERSION'
+RUN bash -lc '. /usr/local/sdkman/bin/sdkman-init.shell && sdk install java $JAVA_VERSION && sdk use java $JAVA_VERSION'
